--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -1,5 +1,5 @@
 body {
-  width: 90%;
+  width: 92vw;
   margin: auto;
   padding: 40px 0 0 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
